--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>priv.llf</groupId>
   <artifactId>priv-llf-commons</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>1.0.0-SNAPSHOT</version>
   <name>priv-llf-commons Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <properties>
@@ -13,11 +13,6 @@
   <dependencies>
 
     <!--calvin自研组件-->
-    <dependency>
-      <groupId>priv.llf</groupId>
-      <artifactId>priv-llf-ability-course-south</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
-    </dependency>
     <dependency>
       <groupId>priv.llf</groupId>
       <artifactId>priv-llf-mybatis</artifactId>
@@ -96,6 +91,27 @@
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.2.4</version>
+    </dependency>
+    <!-- tomcat container -->
+    <dependency>
+      <groupId>javax.servlet.jsp</groupId>
+      <artifactId>jsp-api</artifactId>
+      <version>2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+     <version>1.4.3</version>
     </dependency>
     <!--redis-->
     <dependency>
